# reclaim-solana-sdk

./: .gitignore  Anchor.toml  Cargo.toml  README.md  package.json  tsconfig.json
airdrop-frontend/: config-overrides.js  package.json  tsconfig.json
airdrop-frontend/src/: index.tsx  utils.ts
airdrop-frontend/src/components/: App.tsx  Wallet.tsx
airdrop-frontend/src/css/: App.css
program-keypairs/: airdrop-program-keypair.json  reclaim-program-keypair.json
programs/airdrop/: Cargo.toml
programs/airdrop/src/: args.rs  lib.rs
programs/reclaim/: Cargo.toml
programs/reclaim/src/: constants.rs  errors.rs  events.rs  lib.rs
programs/reclaim/src/instructions/: mod.rs
programs/reclaim/src/instructions/dapp/: create.rs
programs/reclaim/src/instructions/epoch/: add.rs  change_epoch_index.rs  initialize.rs  mod.rs
programs/reclaim/src/instructions/group/: add_member.rs  create.rs  mod.rs  verify_proof.rs
programs/reclaim/src/state/: dapp.rs  epoch.rs  epoch_config.rs  group.rs  mod.rs  proof.rs
programs/reclaim/src/utils/: common.rs  eth.rs  mod.rs  solana.rs
scripts/: package.json
scripts/src/: airdrop-idl.ts  utils.ts
scripts/src/tx/: backFillEpoch.ts  createEpoch.ts  initAirdrop.ts  setupProgram.ts
sdk/: .solitarc.js  package.json
sdk/idl/: reclaim.json
sdk/src/: accounts.ts  eth-utils.ts  index.ts  pda.ts  types.ts  utils.ts
test-keypairs/: test-program-keypair.json
tests/: index.ts  reclaim.ts  utils.ts
tests/suites/: all.ts  group.ts
