[package]
name = "airdrop"
version = "0.1.0"
description = "Basic Airdrop program to showcase reclaim proof verification"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "airdrop"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"
anchor-spl = "0.29.0"
reclaim = { path = "../reclaim", features = ["cpi"] }
