[package]
name = "airdrop"
version = "0.1.0"
description = "Basic Airdrop program to showcase reclaim proof verification"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "airdrop"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"
reclaim-solana = { path = "../../programs/reclaim", features = ["cpi"] }
