[package]
name = "reclaim"
version = "0.1.0"
description = "Reclaim Protocol SDK for Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "reclaim"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"
hex = "0.4.3"
