[package]
name = "reclaim-solana"
version = "0.1.0"
description = "Reclaim Protocol SDK for Solana"
edition = "2021"
license = "MIT OR Apache-2.0"
homepage = "https://www.reclaimprotocol.org/"
repository = "https://gitlab.reclaimprotocol.org/reclaim-clients/solana-sdk"
readme = "../../README.md"
keywords = ["ZKPs", "Solana", "Anchor"]


[lib]
crate-type = ["cdylib", "lib"]
name = "reclaim_solana"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.30.1"
hex = "0.4.3"
